--- a/SuaVoz/Views/Denuncia/Create.cshtml
+++ b/SuaVoz/Views/Denuncia/Create.cshtml
@@ -1,60 +1,188 @@
 ﻿@model SuaVoz.Models.Denuncia
 
 @{
-    ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/crud.cshtml";
+    ViewData["Title"] = "Index";
+    Layout = "";
 }
+<!DOCTYPE html>
+<html lang="pt-br">
 
-<h1>Create</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - SuaVoz</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-<h4>Denuncia</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GeneroId" class="control-label"></label>
-                <select asp-for="GeneroId" class ="form-control" asp-items="ViewBag.GeneroId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="FaixaEtariaId" class="control-label"></label>
-                <select asp-for="FaixaEtariaId" class ="form-control" asp-items="ViewBag.FaixaEtariaId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="RegiaoId" class="control-label"></label>
-                <select asp-for="RegiaoId" class ="form-control" asp-items="ViewBag.RegiaoId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="TipoViolenciaId" class="control-label"></label>
-                <select asp-for="TipoViolenciaId" class ="form-control" asp-items="ViewBag.TipoViolenciaId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataOcorrencia" class="control-label"></label>
-                <input asp-for="DataOcorrencia" class="form-control" />
-                <span asp-validation-for="DataOcorrencia" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Relato" class="control-label"></label>
-                <input asp-for="Relato" class="form-control" />
-                <span asp-validation-for="Relato" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+    <!-- Font Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet" />
+    <!-- Icons Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <link rel="stylesheet" href="~/css/layout.css" />
+    <link rel="stylesheet" href="~/css/denuncia.css" />
+</head>
 
-@section Scripts {
+<body>
+    <header>
+        <nav class="navbar navbar-expand-xl navbar-dark fixed-top navbar__container">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img src="~/img/suaVoz-maltesse.png" alt="" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="mx-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"> <i
+                                    class=" fa-solid fa-house"></i> Home </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="About"> <i
+                                    class="fa-solid fa-briefcase"></i> Sobre
+                                nós </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Rights"> <i
+                                    class="fa-solid fa-book-open-reader"></i> Seus Direitos </a>
+                        </li>
+                        <partial name="/Views/Shared/_LoginPartial.cshtml" />
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main role="main" class="main">
+        <div class="denuncia">
+            <div id="title-area">
+                <h2>Denúncia</h2>
+            </div>
+            <form asp-action="Create" class="form-denuncia">
+
+                <section class="middle-1">
+                    <div class="controla-largura">
+                        <label>
+                            Nome <br />
+                            <input asp-for="Nome" type="text" class="inputs" placeholder="Opcional" />
+                        </label>
+                        <label>
+                            Genero <br>
+                            <select asp-for="GeneroId" asp-items="ViewBag.GeneroId" style="
+              background-color: transparent; 
+               border-left: none; 
+               border-top: none;
+               border-right: none;
+                width: 100%;
+                height: 40px;
+              "></select>
+                        </label>
+                        <label class=" centers">
+                            Faixa Etaria <br>
+                            <select asp-for="FaixaEtariaId" asp-items="ViewBag.FaixaEtariaId" style="
+              background-color: transparent; 
+               border-left: none; 
+               border-top: none;
+               border-right: none;
+                width: 100%;
+                height: 40px;
+              "></select>
+                        </label>
+                    </div>
+                </section>
+                <section class="middle-2">
+                    <div class="controla-largura">
+                        <label>
+                            Região <br>
+                            <select asp-for="RegiaoId" asp-items="ViewBag.RegiaoId" style="
+            background-color: transparent; 
+             border-left: none; 
+             border-top: none;
+             border-right: none;
+              width: 100%;
+              height: 40px;
+            "></select>
+                        </label>
+                        <label>
+                            Tipo de violência <br>
+                            <select asp-for="TipoViolenciaId" asp-items="ViewBag.TipoViolenciaId" style="
+              background-color: transparent; 
+               border-left: none; 
+               border-top: none;
+               border-right: none;
+                width: 100%;
+                height: 40px;
+              "></select>
+                        </label>
+                        <label class=" centers">
+                            Data da ocorrencia <br>
+                            <input asp-for="DataOcorrencia" class="inputs" />
+                        </label>
+                    </div>
+                </section>
+                <section class="final">
+                    <h3>Relato</h3>
+                    <textarea asp-for="Relato" rows="20" id="textarea" placeholder=" Digite aqui seu relato..."
+                        required>
+      </textarea>
+                    <span asp-validation-for="Relato" class="text-danger"></span>
+
+                    <div class="Create__btn">
+                        <a asp-action="Details"><input type="submit" value="Publicar" /></a>
+                        <a asp-action="Index" id="botao-voltar">Voltar</a>
+                    </div>
+                </section>
+            </form>
+        </div>
+    </main>
+
+    <!--==================== FOOTER ====================-->
+    <footer class="footer__container border-top">
+        <div class="footer__content container">
+            <div class="footer__header">
+                <img src="~/img/suaVoz-bege.png" alt="" class="footer__logo" />
+                <p class="footer__paragraph">&copy; 2021 Company, Inc</p>
+            </div>
+            <ul class="footer__body">
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-instagram social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-facebook social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-twitter social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-youtube social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-twitch social__media"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <!--==================== Script Bootstrap ====================-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/denuncia.js"></script>
+    @* @RenderSection("Scripts", required: false) *@
+    @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    }
+</body>
+
+</html>
