--- a/SuaVoz/Views/Denuncia/Details.cshtml
+++ b/SuaVoz/Views/Denuncia/Details.cshtml
@@ -1,61 +1,166 @@
 ﻿@model SuaVoz.Models.Denuncia
-
 @{
-    ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/crud.cshtml";
+    ViewData["Title"] = "Index";
+    Layout = "";
 }
+<!DOCTYPE html>
+<html lang="pt-br">
 
-<h1>Details</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - SuaVoz</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-<div>
-    <h4>Denuncia</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Genero)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Genero.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FaixaEtaria)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FaixaEtaria.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Regiao)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Regiao.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoViolencia)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TipoViolencia.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DataOcorrencia)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataOcorrencia)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Relato)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Relato)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+    <!-- Font Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet" />
+    <!-- Icons Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="~/css/layout.css" />
+    <link rel="stylesheet" href="~/css/details.css" />
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-xl navbar-dark fixed-top navbar__container">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img src="~/img/suaVoz-maltesse.png" alt="" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="mx-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"> <i
+                                    class=" fa-solid fa-house"></i> Home </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="About"> <i
+                                    class="fa-solid fa-briefcase"></i> Sobre
+                                nós </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Rights"> <i
+                                    class="fa-solid fa-book-open-reader"></i> Seus Direitos </a>
+                        </li>
+                        <partial name="/Views/Shared/_LoginPartial.cshtml" />
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main role="main" class="main">
+        <div class="container details__container">
+            <h1 class="title-light">Detalles</h1>
+
+            <div>
+                <h4 class="details_title">Denuncia</h4>
+                <hr />
+                <dl class="row">
+                    <dt class="col-sm-2 details_title">
+                        @Html.DisplayNameFor(model => model.Nome)
+                    </dt>
+                    <dd class="col-sm-10 details_txt">
+                        @Html.DisplayFor(model => model.Nome)
+                    </dd>
+                    <dt class="col-sm-2 details_title">
+                        @* @Html.DisplayNameFor(model => model.Genero) *@
+                        Gênero
+                    </dt>
+                    <dd class="col-sm-10 details_txt">
+                        @Html.DisplayFor(model => model.Genero.Nome)
+                    </dd>
+                    <dt class="col-sm-2 details_title">
+                        @* @Html.DisplayNameFor(model => model.FaixaEtaria) *@
+                        Faixa Etária
+                    </dt>
+                    <dd class="col-sm-10 details_txt">
+                        @Html.DisplayFor(model => model.FaixaEtaria.Nome)
+                    </dd>
+                    <dt class="col-sm-2 details_title">
+                        @* @Html.DisplayNameFor(model => model.Regiao) *@
+                        Região
+                    </dt>
+                    <dd class="col-sm-10 details_txt">
+                        @Html.DisplayFor(model => model.Regiao.Nome)
+                    </dd>
+                    <dt class="col-sm-2 details_title">
+                        @* @Html.DisplayNameFor(model => model.TipoViolencia) *@
+                        Tipo Violência
+                    </dt>
+                    <dd class="col-sm-10 details_txt">
+                        @Html.DisplayFor(model => model.TipoViolencia.Nome)
+                    </dd>
+                    <dt class="col-sm-2 details_title">
+                        @* @Html.DisplayNameFor(model => model.DataOcorrencia) *@
+                        Data de Ocorrência
+                    </dt>
+                    <dd class="col-sm-10 details_txt">
+                        @Html.DisplayFor(model => model.DataOcorrencia)
+                    </dd>
+                    <dt class="col-sm-2 details_title">
+                        @Html.DisplayNameFor(model => model.Relato)
+                    </dt>
+                    <dd class="col-sm-10 details_txt">
+                        <p class="details__relato">@Html.DisplayFor(model => model.Relato)</p>
+                    </dd>
+                </dl>
+            </div>
+            <div>
+                @* <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> | *@
+                <a asp-action="Index" class="details__btn">Voltar</a>
+            </div>
+        </div>
+    </main>
+
+    <!--==================== FOOTER ====================-->
+    <footer class="footer__container border-top">
+        <div class="footer__content container">
+            <div class="footer__header">
+                <img src="~/img/suaVoz-bege.png" alt="" class="footer__logo" />
+                <p class="footer__paragraph">&copy; 2021 Company, Inc</p>
+            </div>
+            <ul class="footer__body">
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-instagram social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-facebook social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-twitter social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-youtube social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-twitch social__media"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <!--==================== Script Bootstrap ====================-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @* <script src="~/js/denuncia.js"></script> *@
+
+    @* @RenderSection("Scripts", required: false) *@
+</body>
+
+</html>
