--- a/SuaVoz/Views/Denuncia/Index.cshtml
+++ b/SuaVoz/Views/Denuncia/Index.cshtml
@@ -2,72 +2,127 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "crud";
+    Layout = "";
 }
+<!DOCTYPE html>
+<html lang="pt-br">
 
-<h1>Index</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - SuaVoz</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genero)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FaixaEtaria)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Regiao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TipoViolencia)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataOcorrencia)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Relato)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Genero.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FaixaEtaria.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Regiao.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TipoViolencia.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataOcorrencia)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Relato)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+    <!-- Font Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet" />
+    <!-- Icons Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="~/css/layout.css" />
+    <link rel="stylesheet" href="~/css/denuncia.css" />
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-xl navbar-dark fixed-top navbar__container">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img src="~/img/suaVoz-maltesse.png" alt="" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="mx-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Index"> <i
+                                    class=" fa-solid fa-house"></i> Home </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="About"> <i
+                                    class="fa-solid fa-briefcase"></i> Sobre
+                                nós </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Rights"> <i
+                                    class="fa-solid fa-book-open-reader"></i> Seus Direitos </a>
+                        </li>
+                        <partial name="/Views/Shared/_LoginPartial.cshtml" />
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main role="main" class="main">
+        <div class="container area-denuncia">
+            <div id="post-area">
+                <a asp-action="Create" id="denuncia_btn">Faça sua
+                    denúncia</a>
+            </div>
+            <section class="denuncias">
+
+                @foreach (var item in Model)
+                {
+                    <div class="container create-post-teste">
+
+                        <p id="nome-denuncia">@Html.DisplayFor(modelItem => item.Nome)</p>
+                        @* <p id="titulo-relato">@Html.DisplayNameFor(model => model.Relato)</p> <br /> *@
+                        <p class="texto-relato">@Html.DisplayFor(modelItem => item.Relato)</p>
+                        <div class="containerDetails_btn">
+                            <a asp-action="Details" asp-route-id="@item.Id" id="details_btn">Details</a>
+                        </div>
+
+                    </div>
+                }
+
+            </section>
+        </div>
+    </main>
+
+    <!--==================== FOOTER ====================-->
+    <footer class="footer__container border-top">
+        <div class="footer__content container">
+            <div class="footer__header">
+                <img src="~/img/suaVoz-bege.png" alt="" class="footer__logo" />
+                <p class="footer__paragraph">&copy; 2021 Company, Inc</p>
+            </div>
+            <ul class="footer__body">
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-instagram social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-facebook social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-twitter social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-youtube social__media"></i></a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__links"><i class="fa-brands fa-twitch social__media"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <!--==================== Script Bootstrap ====================-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/denuncia.js"></script>
+    @* @RenderSection("Scripts", required: false) *@
+</body>
+
+</html>
