--- a/SuaVoz/Views/Home/Index.cshtml
+++ b/SuaVoz/Views/Home/Index.cshtml
@@ -21,7 +21,8 @@
 						<blockquote>
 							<p><em>Martin Luther King Jr.</em></p>
 						</blockquote>
-						<a class="btn hover__cta">Faça a sua denúncia !</a>
+						<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
+							denúncia !</a>
 					</div>
 				</div>
 			</div>
@@ -31,7 +32,8 @@
 					<div class="carousel-caption">
 						<h2>Sua voz, nosso grito !</h2>
 
-						<a class="btn hover__cta" href="#">Faça a sua denúncia !</a>
+						<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
+							denúncia !</a>
 					</div>
 				</div>
 			</div>
@@ -44,7 +46,8 @@
 							Lutamos para ser Sua Voz
 						</h2>
 
-						<a class="btn hover__cta">Faça a sua denúncia !</a>
+						<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
+							denúncia !</a>
 					</div>
 				</div>
 			</div>
@@ -119,7 +122,7 @@
 					<span class="text-center"><strong>19/01 às 20:00 hrs</strong> <br />
 						<i class="fa-brands fa-youtube fa-xl"></i>
 						<i class="fa-brands fa-twitch fa-xl"></i></span>
-					<a href="#" class="lives_card-btn">Confirme sua presença</a>
+					<a class="lives_card-btn">Confirme sua presença</a>
 				</div>
 			</article>
 			<article class="lives_card">
@@ -134,7 +137,7 @@
 						<i class="fa-brands fa-youtube fa-xl"></i>
 						<i class="fa-brands fa-twitch fa-xl"></i></span>
 
-					<a href="#" class="lives_card-btn"> Confirme sua presença</a>
+					<a class="lives_card-btn"> Confirme sua presença</a>
 				</div>
 			</article>
 			<article class="lives_card">
@@ -149,7 +152,7 @@
 						<i class="fa-brands fa-youtube fa-xl"></i>
 						<i class="fa-brands fa-twitch fa-xl"></i></span>
 
-					<a href="#" class="lives_card-btn">Confirme sua presença</a>
+					<a class="lives_card-btn">Confirme sua presença</a>
 				</div>
 			</article>
 		</div>
