--- a/SuaVoz/Views/Home/rights.cshtml
+++ b/SuaVoz/Views/Home/rights.cshtml
@@ -172,13 +172,13 @@
                             <article class="questions_padding">
                                 <div class="questions_answer">
                                     <h4 class="questions_title" class="text-left">
-                                        O que fazer se o Policial desrespeitar seus direitos ou, de alguma forma, você se sentir prejudicado em função da atuação da PM?
+                                        O que fazer se o Policial desrespeitar seus direitos ou, de alguma forma, você se sentir prejudicado em função da atuação da Polícia?
                                         <span class="questions_arrow">
                                             <img src="~/img/arrow.svg" alt="" class="questions_img" />
                                         </span>
                                     </h4>
 
-                                    <p class="questions_show">Anote o nome do Policial , o número da viatura PM, o dia, horário e local em que ocorreu o fato e se dirija até a Corregedoria de Polícia para que seja formalizada a denúncia. Se houver testemunhas do fato, leve consigo dados para que estas pessoas possam ser ouvidas no decorrer do procedimento interno de apuração, instaurado para averiguar a situação denunciada.</p>
+                                    <p class="questions_show">Anote o nome do Policial , o número da viatura Polícia, o dia, horário e local em que ocorreu o fato e se dirija até a Corregedoria de Polícia para que seja formalizada a denúncia. Se houver testemunhas do fato, leve consigo dados para que estas pessoas possam ser ouvidas no decorrer do procedimento interno de apuração, instaurado para averiguar a situação denunciada.</p>
                                 </div>
                             </article>
 
@@ -187,7 +187,7 @@
                                 <i>Art. <b>244</b> do <b>CPP</b> – A busca pessoal independerá de mandado, no caso de prisão ou quando houver fundada suspeita de que a pessoa esteja na posse de arma proibida ou de objetos ou papéis que constituam corpo de delitou, ou quando a medida for determinada no curso de busca domiciliar.</i>
                             </p>
 
-                            <p class="questions_paragraph"><strong>Dicas:</strong> Aconselha-se não exigir do Policial a identificação no “calor da emoção” ou durante a ação Policial. Espere alguns instantes até que seja concluída a abordagem por parte da PM.- As interjeições para dirigir-se a um representante do BPM em ação podem ser “policial” ou “soldado”.</p>
+                            <p class="questions_paragraph"><strong>Dicas:</strong> Aconselha-se não exigir do Policial a identificação no “calor da emoção” ou durante a ação Policial. Espere alguns instantes até que seja concluída a abordagem por parte da Polícia.- As interjeições para dirigir-se a um representante do BPM em ação podem ser “policial” ou “soldado”.</p>
                         </div>
                     </section>
                     <!--  -->
