--- a/SuaVoz/Views/Denuncia/Index.cshtml
+++ b/SuaVoz/Views/Denuncia/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SuaVoz.Models.Denuncia>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Denuncia";
     Layout = "";
 }
 <!DOCTYPE html>
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - SuaVoz</title>
+    <link rel="shortcut icon" href="~/img/favicon.png" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
@@ -27,6 +28,21 @@
 
     <link rel="stylesheet" href="~/css/layout.css" />
     <link rel="stylesheet" href="~/css/denuncia.css" />
+    <style>
+        ::-webkit-scrollbar {
+            width: 10px
+        }
+
+        ::-webkit-scrollbar-track {
+            background: transparent;
+            border-radius: 11px
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #fbf2c0;
+            border-radius: 6px
+        }
+    </style>
 </head>
 
 <body>
@@ -62,9 +78,10 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="main">
-        <div class="container area-denuncia">
-            <div id="post-area">
+    <main role="main">
+        <div class="container denunciaContainer">
+
+            <div id="btn_container">
                 <a asp-action="Create" id="denuncia_btn">Faça sua
                     denúncia</a>
             </div>
@@ -75,7 +92,7 @@
                     <div class="container create-post-teste">
 
                         <p id="nome-denuncia">@Html.DisplayFor(modelItem => item.Nome)</p>
-                        @* <p id="titulo-relato">@Html.DisplayNameFor(model => model.Relato)</p> <br /> *@
+
                         <p class="texto-relato">@Html.DisplayFor(modelItem => item.Relato)</p>
                         <div class="containerDetails_btn">
                             <a asp-action="Details" asp-route-id="@item.Id" id="details_btn">Details</a>
@@ -86,8 +103,8 @@
 
             </section>
         </div>
+        </div>
     </main>
-
     <!--==================== FOOTER ====================-->
     <footer class="footer__container border-top">
         <div class="footer__content container">
@@ -114,12 +131,13 @@
             </ul>
         </div>
     </footer>
+
     <!--==================== Script Bootstrap ====================-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    
+
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/denuncia.js"></script>
     @* @RenderSection("Scripts", required: false) *@
