--- a/SuaVoz/wwwroot/css/createDenuncia.css
+++ b/SuaVoz/wwwroot/css/createDenuncia.css
@@ -14,7 +14,6 @@
 	--color-roxo: #400135;
 	--color-preto2: #261f1d;
 }
-
 html,
 body {
 	height: 100%;
@@ -24,85 +23,94 @@ body {
 
 main {
 	padding: 2rem 0;
-	width: 100%;
-	height: 100%;
 	margin-top: 75px;
-	background-color: var(--color-preto);
+	background-color: var(--color-bg);
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23bf8069' fill-opacity='0.1'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E");
 }
-a {
-	text-decoration: none !important;
-}
-div.area-denuncia {
-	height: 100%;
+
+/* Denuncia */
+
+.denuncia__container {
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	overflow: auto;
-}
-.denunciaContainer {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	overflow: scroll;
 }
-#btn_container {
+
+.denuncia__content {
+	width: 600px;
+	min-width: 200px;
+	padding: 1.5rem;
+}
+
+.denuncia__form {
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.form_inputs {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	justify-content: space-between;
+	font-size: 1.2rem;
+	overflow: hidden;
+}
+.form_inputs-nome {
+	width: 550px;
+	background: transparent;
+	border: none;
+	border-bottom: 1px solid var(--color-preto);
+	outline-color: var(--color-grena);
+}
+.form_inputs-data {
+	width: 250px;
+	background: transparent;
+	border: none;
+	border-bottom: 1px solid var(--color-preto);
+	outline-color: var(--color-grena);
+}
+.form_select {
+	width: 200px;
+	background-color: transparent;
+	border: none;
+	border-bottom: 1px solid var(--color-preto);
+	outline-color: var(--color-grena);
+}
+.form_relato {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 	justify-content: center;
-	margin: 1rem 0;
-}
-#denuncia_btn {
-	background: var(--color-maltesse);
-	color: var(--color-preto);
-	border: 2px solid var(--color-maltesse);
-	border-radius: 1rem;
-	padding: 0.4rem;
-
-	font-weight: 600;
-	margin: 1rem;
-}
-#denuncia_btn:hover {
-	background: var(--color-bg);
-	color: var(--color-maltesse);
-	border: 2px solid var(--color-maltesse);
+	align-items: center;
 }
 
-.denuncias {
-	height: 100%;
-	border: 2px solid var(--color-bg);
-	background: var(--color-maltesse);
-	margin: auto;
-	border-radius: 0.5rem;
-
+#textarea {
 	width: 100%;
-	max-width: 600px;
-	min-width: 100px;
-	overflow: scroll;
+	height: 200px;
+	resize: none;
+	padding: 1em;
+	outline-color: var(--color-grena);
 }
 
-.create-post-teste {
-	width: 90%;
-	border: 2px solid var(--color-bg);
-	margin: 1rem auto;
-	background-color: var(--color-bg);
-}
-
-.containerDetails_btn {
+.denuncia__btns {
 	display: flex;
-	justify-content: flex-end;
-	align-items: center;
+	flex-direction: column;
+	gap: 1rem;
 }
 
-#details_btn {
+.denuncia__btns-btn {
+	border: none;
+	outline: none;
+	padding: 0.6rem;
+	background: var(--color-maltesse);
+	color: var(--color-bg);
+	border-radius: 0.5rem;
+}
+
+.denuncia__btns-btn:hover {
+	padding: 0.6rem;
 	background: var(--color-preto);
 	color: var(--color-bg);
-	border-radius: 1rem;
-	padding: 0.4rem 1rem;
-}
-
-.texto-relato {
-	word-break: break-word;
+	border-radius: 0.5rem;
 }
