--- a/SuaVoz/Views/Shared/crud.cshtml
+++ b/SuaVoz/Views/Shared/crud.cshtml
@@ -29,7 +29,7 @@
 	<header>
 		<nav class="navbar navbar-expand-xl navbar-dark fixed-top navbar__container">
 			<div class="container">
-				<a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" asp-controller="Home" asp-action="Index">
 					<img src="~/img/suaVoz-maltesse.png" alt="" />
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
