--- a/SuaVoz/wwwroot/css/rights.css
+++ b/SuaVoz/wwwroot/css/rights.css
@@ -213,6 +213,9 @@
 	margin-bottom: 0 !important;
 }
 @media (max-width: 600px) {
+	.modal-body h3 {
+		font-size: 1.5rem;
+	}
 	.direitosHero__content-img {
 		min-width: 100px;
 	}
@@ -221,6 +224,9 @@
 	}
 }
 @media (max-width: 360px) {
+	.modal-body h3 {
+		font-size: 1.2rem;
+	}
 	.direitosHero__content-img {
 		min-width: 60px;
 	}
