fix: arrumando erros de português

--- a/SuaVoz/Views/Denuncia/Create.cshtml
+++ b/SuaVoz/Views/Denuncia/Create.cshtml
@@ -74,11 +74,11 @@
                             <input asp-for="Nome" type="text" placeholder="..." class="form_inputs-nome" />
                         </label>
                         <label>
-                            Genero <br />
+                            Gênero <br />
                             <select asp-for="GeneroId" asp-items="ViewBag.GeneroId" class="form_select"></select>
                         </label>
                         <label>
-                            Faixa Etaria <br />
+                            Faixa Etária <br />
                             <select asp-for="FaixaEtariaId" asp-items="ViewBag.FaixaEtariaId"
                                 class="form_select"></select>
                         </label>
@@ -92,7 +92,7 @@
                                 class="form_select"></select>
                         </label>
                         <label>
-                            Data da ocorrencia <br />
+                            Data da ocorrência <br />
                             <input asp-for="DataOcorrencia" class="form_inputs-data" />
                         </label>
                     </section>
