--- a/SuaVoz/Views/Denuncia/Details.cshtml
+++ b/SuaVoz/Views/Denuncia/Details.cshtml
@@ -64,10 +64,10 @@
     </header>
     <main role="main" class="main">
         <div class="container details__container">
-            <h1 class="title-light">Detalles</h1>
+            <h1 class="title-light">Detalhes</h1>
 
             <div>
-                <h4 class="details_title">Denuncia</h4>
+                <h4 class="details_title">Denúncia</h4>
                 <hr />
                 <dl class="row">
                     <dt class="col-sm-2 details_title">
