--- a/SuaVoz/Views/Denuncia/Index.cshtml
+++ b/SuaVoz/Views/Denuncia/Index.cshtml
@@ -95,7 +95,7 @@
 
                         <p class="texto-relato">@Html.DisplayFor(modelItem => item.Relato)</p>
                         <div class="containerDetails_btn">
-                            <a asp-action="Details" asp-route-id="@item.Id" id="details_btn">Details</a>
+                            <a asp-action="Details" asp-route-id="@item.Id" id="details_btn">Detalhes</a>
                         </div>
 
                     </div>
