--- a/SuaVoz/Views/Shared/_LoginPartial.cshtml
+++ b/SuaVoz/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
 {
     <li class="nav-item">
         <a class="nav-link " asp-area="" asp-controller="Denuncia" asp-action="Index"><i class="fa-solid fa-bullhorn"></i>
-            Denuncia</a>
+            Denúncia</a>
     </li>
     <li class="nav-item">
         <a id="manage" class="nav-link " asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Bem vindo
