fix: hover botão home

--- a/SuaVoz/Views/Home/Index.cshtml
+++ b/SuaVoz/Views/Home/Index.cshtml
@@ -204,7 +204,7 @@
 			<input type="text" class="form_input" placeholder="Nome" name="name" />
 			<input type="email" class="form_input" placeholder="Email" name="email" />
 			<textarea class="form_input form_input-message" placeholder="Escreva seu messagem" name="message"></textarea>
-			<input type="submit" class="form_cta" value="Enviar" />
+			<button type="submit" class="hvr-bounce-to-top">Enviar</button>
 		</div>
 	</form>
 </section>
