--- a/SuaVoz/wwwroot/css/home.css
+++ b/SuaVoz/wwwroot/css/home.css
@@ -48,19 +48,7 @@
 	object-position: center center;
 	opacity: 0.5;
 }
-.hover__cta {
-	background: var(--color-maltesse);
-	color: var(--color-bg);
-	padding: 0.5rem;
-	font-size: 1.2rem;
-	border-radius: 0.5rem;
-}
 
-.hover__cta:hover {
-	background: var(--color-bg);
-	color: var(--color-maltesse);
-	font-weight: 700;
-}
 
 /* Consquitas */
 .conquistas__container {
@@ -281,6 +269,65 @@
 	resize: none;
 	padding: 1.8em 1em;
 }
+
+.hover__cta {
+	padding: 0.5rem;
+	font-size: 1.2rem;
+	color: var(--color-creme);
+}
+
+.carousel--button {
+	background: var(--color-maltesse);
+	font-size: 1em;
+	border: none;
+	padding: 0.7em 0;
+	cursor: pointer;
+	font-weight: 600;
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	position: relative;
+	-webkit-transition-property: color;
+	transition-property: color;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+	border-radius: 0.5rem;
+}
+
+.carousel--button:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: var(--color-creme);
+	-webkit-transform: scaleY(0);
+	transform: scaleY(0);
+	-webkit-transform-origin: 50% 100%;
+	transform-origin: 50% 100%;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+}
+.carousel--button:hover .hover__cta, .carousel--button:focus .hover__cta, .carousel--button:active .hover__cta{
+	color: var(--color-maltesse);
+	font-weight: 700;
+}
+.carousel--button:hover:before, .carousel--button:focus:before, .carousel--button:active:before {
+	-webkit-transform: scaleY(1);
+	transform: scaleY(1);
+	-webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+	transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+	border-radius: 0.5rem;
+}
+
 
 .hvr-bounce-to-top {
 	background: var(--color-maltesse);
