--- a/SuaVoz/Views/Home/Index.cshtml
+++ b/SuaVoz/Views/Home/Index.cshtml
@@ -21,8 +21,10 @@
 						<blockquote>
 							<p><em>Martin Luther King Jr.</em></p>
 						</blockquote>
-						<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
-							denúncia !</a>
+						<button class="carousel--button">
+							<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
+                            							denúncia !</a>
+						</button>
 					</div>
 				</div>
 			</div>
@@ -31,9 +33,11 @@
 				<div class="container">
 					<div class="carousel-caption">
 						<h2>Sua voz, nosso grito !</h2>
+						<button class="carousel--button">
+							<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
+                            							denúncia !</a>
+						</button>
 
-						<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
-							denúncia !</a>
 					</div>
 				</div>
 			</div>
@@ -45,9 +49,11 @@
 							Não lutamos por integração ou por separação.<br />
 							Lutamos para ser Sua Voz
 						</h2>
-
-						<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
-							denúncia !</a>
+						<button class="carousel--button">
+							<a class="btn hover__cta" asp-controller="Denuncia" asp-action="Index" asp-area="Identity">Faça a sua
+                            							denúncia !</a>
+						</button>
+						
 					</div>
 				</div>
 			</div>
