--- a/SuaVoz/Views/Shared/crud.cshtml
+++ b/SuaVoz/Views/Shared/crud.cshtml
@@ -57,7 +57,7 @@
 		</nav>
 	</header>
 	<main role="main" class="main">
-		<div style="padding: 2rem;">
+		<div>
 			@RenderBody()
 		</div>
 	</main>
