--- a/SuaVoz/Views/Home/rights.cshtml
+++ b/SuaVoz/Views/Home/rights.cshtml
@@ -31,7 +31,9 @@
                     </picture>
                     <div class="direitosBodys_card-body">
                         <h4 class="direitosBodys_card-title">Lei da igualdade racial</h4>
-                        <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal1">Leía Mais</a>
+                        <button class="card-btn">
+                            <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal1">Leía Mais</a>
+                        </button>
                     </div>
                 </article>
                 <!-- Cards 2 -->
@@ -41,7 +43,9 @@
                     </picture>
                     <div class="direitosBodys_card-body">
                         <h4 class="direitosBodys_card-title">Abordagens Policiais</h4>
-                        <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal2">Leía Mais</a>
+                          <button class="card-btn">
+                              <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal1">Leía Mais</a>
+                          </button>
                     </div>
                 </article>
                 <!-- Cards 3 -->
@@ -51,7 +55,9 @@
                     </picture>
                     <div class="direitosBodys_card-body">
                         <h4 class="direitosBodys_card-title">Cotas Raciais</h4>
-                        <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal3">Leía Mais</a>
+                            <button class="card-btn">
+                                <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal1">Leía Mais</a>
+                            </button>
                     </div>
                 </article>
                 <!-- Cards 4 -->
@@ -61,7 +67,9 @@
                     </picture>
                     <div class="direitosBodys_card-body">
                         <h4 class="direitosBodys_card-title">Política de Saúde da População Negra</h4>
-                        <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal4">Leía Mais</a>
+                            <button class="card-btn">
+                                <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal1">Leía Mais</a>
+                            </button>
                     </div>
                 </article>
                 <!-- Cards 5 -->
@@ -74,7 +82,9 @@
                             Injúria Racial e Racismo <br />
                             Discriminação
                         </h4>
-                        <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal5">Leía Mais</a>
+                            <button class="card-btn">
+                                <a href="#" class="direitosBodys_card-btn" data-bs-toggle="modal" data-bs-target="#modal1">Leía Mais</a>
+                            </button>
                     </div>
                 </article>
             </div>
